Bug fix for color contrast / sustainability rating popup(pdp page)
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@82640 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/accessibility/assistive_color_overrides.css
+++ b/projects/Media/docroot/assets/css/accessibility/assistive_color_overrides.css
@@ -976,8 +976,11 @@ color: #B93D3F;
 	color:#333;
 }
 .assistive-mode .nav li{
-	background-color: #098A1E;
+	background-color:#098A1E;
 }
-.assistive-mode .nav a:focus{
-	background-color: #AF3D08 !important;
+.assistive-mode .nav li a:focus{
+	background-color:#AF3D08 !important;
+}
+.assistive-mode .nav li:hover{
+	background-color:#098A1E;
 }
